--- a/AJS_TP_2/index.html
+++ b/AJS_TP_2/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title></title>
-	</head>
-	<body>
-		
-	</body>
+<head>
+  <meta charset="UTF-8">
+  <title>Fun with promises</title>
+</head>
+
+<body>
+  
+  <p>Take a look at <a href="./public/index.html">this code</a>. It uses promises. The purpose of the code is to wait for a set of ressources (images) to load before any other treatments. </p>
+<p>
+  Your job is to modify the code in order to package it into a module.
+</p>
+<p>
+  This module will expose a function (or method) that will take as an entry a list of paths to images and the id of a div. When called, this function will load all images of the list and display them into the div.
+</p>
+
+
+  
+</body>
 </html>
