--- a/Node_TP_1/index.html
+++ b/Node_TP_1/index.html
@@ -20,7 +20,7 @@
 		<div class="todo">
 			<p>The goal of this lab is to get accointed to NodeJS and JS development for this framework. </p>
 			<p>At the end of this lab, you should be abble to produce a maintanable CLI app hosted on NodeJS. Let's call it "ZeApp"</p>
-			<p>The purpose of "ZeApp" is to get a list of 100 random french addresses. You will use the <code>axios</code> <a href="https://www.npmjs.com/package/axios">package</a> and the <a hreff="https://randomuser.me/documentation#howto">randomuser.me</a> API (see section "Nationalities").</p>. 
+			<p>The purpose of "ZeApp" is to get a list of 100 random french addresses. You will use the <code>axios</code> <a href="https://www.npmjs.com/package/axios">package</a> and the <a href="https://randomuser.me/documentation#howto">randomuser.me</a> API (see section "Nationalities").</p>. 
 			<p>Nice to have : a progress bar and a nice CLI interface.... all with node, of course.</p>
 		</div>
 
