--- a/Node_TP_1/index.html
+++ b/Node_TP_1/index.html
@@ -205,7 +205,7 @@ console.log(chalk.yellow('hi!'));
 	<p>An easy way to tell Node.js to treat the modules in ECMAScript format is to use the .mjs file extension:
 	<pre><code class="js">
 		// weekday-from-date.mjs (ES Module) 
-		const WEEKDAY = ['Monday', 'Tuesday', ‘Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']; 
+		const WEEKDAY = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']; 
 		
 		export function weekDayFromDate(date) { 
 			if (!(date instanceof Date)) { 
